h1. CHANGELOG

h3. 3.0.0 unreleased

* remove options for Rails 3.2 example applications
* remove Mongoid-specific code

h3. 2.6.13 June 14, 2014

* generate RSpec tests for Pundit with the rails_apps_testing gem

h3. 2.6.12 June 6, 2014

* generate RSpec tests for OmniAuth with the rails_apps_testing gem
* Devise tests now generated by the rails_apps_testing gem

h3. 2.6.11 June 3, 2014

* for Devise, modify 'config/initializers/filter_parameter_logging.rb' file only for Rails 4.1
* update RSpec version for RSpec 3.0.0 final release

h3. 2.6.10 May 31, 2014

* revise 'rails-omniauth' recipe

h3. 2.6.9 May 29, 2014

* for custom application option with Devise, fixes https://github.com/RailsApps/rails-composer/issues/178
* for Devise, need 'domain_name' even without the email option (contributed by Jimmy Zhang)
* improve menu when 'Contributed applications' is selected

h3. 2.6.8 May 26, 2014

* for Devise, add 'domain_name' to 'secrets.yml' file for tests

h3. 2.6.7 May 26, 2014

* for Devise, set 'config.mailer_sender' in 'config/initializers/devise.rb' file
* for Devise, add 'password_confirmation' to 'config/initializers/filter_parameter_logging.rb' file
* add tests for 'rails_signup_download' app

h3. 2.6.6 May 11, 2014

* change prompts for selection menu

h3. 2.6.5 May 10, 2014

* in 'models' recipe, need to run 'rake db:migrate' immediately after adding migrations

h3. 2.6.4 May 6, 2014

* in 'extras' recipe, remove gems used to assist rails_apps_composer

h3. 2.6.3 May 4, 2014

* no need to set app name in 'config/routes.rb' file for Rails 4.1

h3. 2.6.2 May 4, 2014

* don't include 'domain_name' in 'secrets.yml' file unless email option is selected
* remove temporary rails_apps_pages gem during cleanup phase

h3. 2.6.1 May 4, 2014

* fix error introduced by 'secrets' preference setting
* remove warning about incompatible recipes; add a welcome banner

h3. 2.6.0 May 4, 2014

* no need to set app name in 'config/routes.rb' file for Rails 4.1