@@ -19,7 +19,7 @@ requires: [git, railsapps,
   rails_devise_pundit,
   rails_signup_download,
   setup, readme, gems,
-  testing, tests4,
+  tests4,
   email,
   models, controllers, views, routes,
   frontend,
