@@ -20,12 +20,6 @@ after_bundler do
       generate 'migration AddConfirmableToUsers confirmation_token:string confirmed_at:datetime confirmation_sent_at:datetime unconfirmed_email:string'
     end
     run 'bundle exec rake db:migrate'
-    ## DEVISE AND CUCUMBER
-    if prefer :integration, 'cucumber'
-      # Cucumber wants to test GET requests not DELETE requests for destroy_user_session_path
-      # (see https://github.com/RailsApps/rails3-devise-rspec-cucumber/issues/3)
-      gsub_file 'config/initializers/devise.rb', 'config.sign_out_via = :delete', 'config.sign_out_via = Rails.env.test? ? :get : :delete'
-    end
   end
   ### OMNIAUTH ###
   if prefer :authentication, 'omniauth'
